--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
 
 canvas {
   display: block;
+}
+
+.allButtons {
+  width: 150px;
+  background-color: pink;
+  border-radius: 10px;
 }
